--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <ul>
  <li><a href="#About">About</a></li>
  <li><a href="#About">Projects</a></li>
- <li><a href="#About">Contact</a></li>
+ <li><a href="#contact">Contact</a></li>
 </ul> 
 </div>
 </div>
@@ -39,6 +39,13 @@
  
 
 <div class="About">
+</div>
+
+<div class="Contact">
+
+
+
+
 </div>
 
 </body></html>
